fix(DataGrid): design review horizontal scrolling

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
@@ -8,7 +8,7 @@
 
 @import './variables';
 
-.#{$block-class}__table-toolbar > section {
+.#{$block-class}__table-toolbar>section {
   z-index: 2;
   overflow: visible; // RowSizeDropdown depend on this
 }
@@ -35,10 +35,11 @@
         align-items: center;
         color: $text-01;
       }
+
       .#{$block-class}__head-select-all.#{$block-class}__checkbox-cell.#{$block-class}__checkbox-cell-sticky-left {
         position: sticky;
         z-index: 1;
-        left: 0;
+        left: $spacing-09;
       }
     }
 
@@ -46,13 +47,14 @@
       align-items: center;
       padding-top: 0;
       padding-bottom: 0;
+
       &.#{$block-class}__cell--spacer {
         padding: 0;
       }
     }
 
     td.#{$carbon-prefix}--table-column-checkbox,
-    th.#{$carbon-prefix}--table-column-checkbox {
+    .#{$block-class}__head-select-all.#{$carbon-prefix}__checkbox-cell {
       /* stylelint-disable-next-line carbon/layout-token-use */
       padding-top: 0.6875rem;
 
@@ -61,9 +63,10 @@
         align-items: center;
         padding-top: 0;
       }
+
       &.#{$block-class}__checkbox-cell-sticky-left {
         position: sticky;
-        left: 0;
+        left: $spacing-09;
       }
     }
 
@@ -77,6 +80,7 @@
     }
 
     &.#{$block-class}__variable-row-height {
+
       &.#{$carbon-prefix}--data-table--compact,
       &.#{$carbon-prefix}--data-table--xs {
         .#{$block-class}__cell {
@@ -108,6 +112,7 @@
   }
 
   &.#{$block-class}__vertical-align-top {
+
     &.#{$carbon-prefix}--data-table--tall,
     &.#{$carbon-prefix}--data-table--lg,
     &.#{$carbon-prefix}--data-table--xl {
@@ -126,6 +131,7 @@
     }
 
     &.#{$block-class}__variable-row-height {
+
       &.#{$carbon-prefix}--data-table--tall,
       &.#{$carbon-prefix}--data-table--lg,
       &.#{$carbon-prefix}--data-table--xl {
@@ -146,6 +152,7 @@
     }
   }
 }
+
 .#{$block-class}__grid-container::-webkit-scrollbar-thumb {
   background-color: $text-03;
 }
@@ -154,6 +161,7 @@
   width: 6px;
   background-color: $ui-background;
 }
+
 .#{$block-class}__grid-container {
   display: block;
   width: 100%;
@@ -239,14 +247,11 @@
     -webkit-appearance: none; // could be fixed by post-css plugin
   }
 
-  th.#{$carbon-prefix}--table-column-checkbox {
-    display: block;
-  }
-
   td.#{$carbon-prefix}--table-column-checkbox,
   th.#{$carbon-prefix}--table-column-checkbox {
     /* stylelint-disable-next-line declaration-no-important */
-    padding-right: $spacing-06 !important;
+    padding-right: $spacing-05 !important;
+    width: $spacing-09 !important;
   }
 }
 
@@ -318,12 +323,14 @@
 }
 
 .#{$block-class}__head-hidden-select-all {
-  padding-right: $spacing-08;
+  padding-right: 3.4rem;
+
   &.#{$block-class}__select-all-sticky-left {
     position: sticky;
     z-index: 1;
-    left: 0;
+    left: $spacing-09;
     background-color: $ui-03;
+    width: 3.4rem;
   }
 }
 
@@ -354,10 +361,18 @@
   overflow: auto;
 }
 
-.#{$block-class}__sticky.#{$block-class}__table-simple thead > div {
+.#{$block-class}__sticky.#{$block-class}__table-simple thead>div {
   overflow: hidden;
   /* stylelint-disable-next-line declaration-no-important */
   width: 100% !important;
+}
+
+.#{$block-class}__sticky thead {
+  display: flex;
+
+  tr.#{$block-class}__sticky {
+    width: unset;
+  }
 }
 
 .#{block-class}__displayFlex {
@@ -402,6 +417,7 @@
   .#{$carbon-prefix}--data-table-content {
     flex: 1 1 0%;
   }
+
   .#{$block-class}__table-container {
     overflow: hidden;
   }
@@ -417,15 +433,14 @@
 
 .#{$block-class}__carbon-row-expanded {
   position: relative;
+
   &.#{$block-class}__carbon-row-expanded-hover-active::before {
     position: absolute;
     z-index: 2;
     /* stylelint-disable-next-line carbon/layout-token-use */
     top: var(--#{$block-class}--row-height);
     /* stylelint-disable-next-line carbon/layout-token-use */
-    left: calc(
-      var(--#{$block-class}--indicator-offset-amount) + #{$spacing-05}
-    );
+    left: calc(var(--#{$block-class}--indicator-offset-amount) + #{$spacing-05});
     width: 1px;
     height: var(--#{$block-class}--indicator-height);
     border-left: 1px solid $interactive-01;
@@ -449,6 +464,7 @@
   .#{$block-class}__table-toolbar {
     flex: 0 0 auto;
   }
+
   .#{$carbon-prefix}--table-toolbar {
     background: transparent;
   }
@@ -477,14 +493,11 @@
   }
 }
 
-.#{$block-class}
-  .#{$carbon-prefix}--data-table--selected:not(.#{$block-class}__active-row) {
+.#{$block-class} .#{$carbon-prefix}--data-table--selected:not(.#{$block-class}__active-row) {
   position: relative;
 }
 
-.#{$block-class}
-  .#{$carbon-prefix}--data-table--selected:not(.#{$block-class}__active-row)
-  ::before {
+.#{$block-class} .#{$carbon-prefix}--data-table--selected:not(.#{$block-class}__active-row) ::before {
   position: absolute;
   top: 0;
   left: 0;
@@ -494,39 +507,33 @@
   content: '';
 }
 
-.#{$pkg-prefix}--datagrid__table-toolbar
-  .#{$carbon-prefix}--batch-summary__para {
+.#{$pkg-prefix}--datagrid__table-toolbar .#{$carbon-prefix}--batch-summary__para {
   white-space: nowrap;
 }
 
-.#{$pkg-prefix}--datagrid__table-toolbar
-  .#{$carbon-prefix}--batch-actions
-  .#{$carbon-prefix}--batch-actions--active {
+.#{$pkg-prefix}--datagrid__table-toolbar .#{$carbon-prefix}--batch-actions .#{$carbon-prefix}--batch-actions--active {
   overflow-x: hidden;
 }
 
-.#{$pkg-prefix}--datagrid__table-toolbar
-  .#{$pkg-prefix}--datagrid__button-menu--icon-only.#{$pkg-prefix}--button-menu {
+.#{$pkg-prefix}--datagrid__table-toolbar .#{$pkg-prefix}--datagrid__button-menu--icon-only.#{$pkg-prefix}--button-menu {
   display: flex;
   min-width: $spacing-08;
   justify-content: center;
   margin-right: $spacing-04;
 }
 
-.#{$pkg-prefix}--datagrid__table-toolbar
-  .#{$pkg-prefix}--datagrid__button-menu {
+.#{$pkg-prefix}--datagrid__table-toolbar .#{$pkg-prefix}--datagrid__button-menu {
   min-width: calc(#{$spacing-12} + #{$spacing-03});
 }
 
-.#{$pkg-prefix}--datagrid__table-toolbar
-  .#{$pkg-prefix}--datagrid__button-menu--icon-only.#{$pkg-prefix}--button-menu
-  .#{$pkg-prefix}--button-menu__trigger {
+.#{$pkg-prefix}--datagrid__table-toolbar .#{$pkg-prefix}--datagrid__button-menu--icon-only.#{$pkg-prefix}--button-menu .#{$pkg-prefix}--button-menu__trigger {
   display: flex;
   width: 100%;
   min-width: $spacing-09;
   justify-content: center;
   padding: 0;
   margin: 0;
+
   .#{$carbon-prefix}--btn__icon {
     margin: 0;
   }
