--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_useSelectAllToggle.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_useSelectAllToggle.scss
@@ -8,15 +8,19 @@
 
 @import './variables';
 
-th.#{$block-class}__select-all-toggle-on,
-td.#{$block-class}__select-all-toggle-on {
-  /* stylelint-disable-next-line declaration-no-important */
-  width: 4.5rem !important;
-  /* stylelint-disable-next-line declaration-no-important */
-  min-width: initial !important;
-  box-sizing: border-box;
-  flex: 0 0 auto;
+.#{$block-class}__grid-container {
+
+  th.#{$block-class}__select-all-toggle-on,
+  td.#{$block-class}__select-all-toggle-on {
+    /* stylelint-disable-next-line declaration-no-important */
+    width: 4.5rem !important;
+    /* stylelint-disable-next-line declaration-no-important */
+    min-width: initial !important;
+    box-sizing: border-box;
+    flex: 0 0 auto;
+  }
 }
+
 th.#{$block-class}__select-all-toggle-on {
   display: flex;
   align-items: center;
@@ -25,4 +29,8 @@ th.#{$block-class}__select-all-toggle-on {
 
 th.#{$block-class}__select-all-toggle-on.button {
   margin-left: $spacing-01;
+}
+
+td.#{$block-class}__select-all-toggle-on {
+  border-left: 1px solid $active-light-ui;
 }
